--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 *.m4s
 *.mp4
 *.ts
+*.mpd
+# Archivos json de metadatos de descarga    
+*.meta_selected.json
+*.meta.json
 
 # Archivos de configuracion predefinidos del usuario
 *.presets.json
