--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
 plugins {
     id 'com.android.application' version '8.1.4' apply false
-    id 'kotlin-android' version '1.9.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
 }
 
 task clean(type: Delete) {
